fixed overflowing text

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -57,6 +57,9 @@
     font-feature-settings:
       "rlig" 1,
       "calt" 1;
+    .text-wrap-bug {
+      text-wrap: wrap;
+    }
   }
 }
 
